--- a/package.json
+++ b/package.json
@@ -13,8 +13,20 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@hocuspocus/provider": "^2.9.0",
+    "@tiptap/extension-character-count": "^2.1.16",
+    "@tiptap/extension-collaboration": "^2.1.16",
+    "@tiptap/extension-collaboration-cursor": "^2.1.16",
+    "@tiptap/extension-highlight": "^2.1.16",
+    "@tiptap/extension-task-item": "^2.1.16",
+    "@tiptap/extension-task-list": "^2.1.16",
+    "@tiptap/pm": "^2.1.16",
+    "@tiptap/starter-kit": "^2.1.16",
+    "@tiptap/vue-3": "^2.1.16",
+    "@vueup/vue-quill": "^1.2.0",
     "axios": "^1.6.2",
     "pinia": "^2.1.7",
+    "remixicon": "^4.1.0",
     "vue": "^3.3.10",
     "vue-query": "^1.26.0",
     "vue-router": "^4.2.5"
