빌드 에러 해결 v1.0.0

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,5 +12,13 @@
     "target": "es6",
     "module": "commonjs",
     "types": ["vite/client"],
+    "allowJs": true,
+    "paths": {
+      "@/*": ["./src/*"]
+    },
+    "lib": [
+      "ES2021.String",
+      "DOM"
+    ]
   }
 }
