빌드 에러 수정 v1.2.0

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,8 @@
     "lib": [
       "ES2021.String",
       "DOM"
-    ]
+    ],
+    "allowImportingTsExtensions": true,
+    "noEmit": true
   }
 }
