--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,5 @@
 [[redirects]]
-  from = "/proxy/*"
+  from = "/kcbs/api/*"
   to = "https://port-0-kcbs-web-backend-dc9c2nlsiimp11.sel5.cloudtype.app/:splat"
   status = 200
   force = true
